# sugo

./: .gitignore  pyproject.toml
.github/workflows/: python-app.yml
sugo/: README.md  accounts.py  apkdetails.py  bugdescriptor.py  bugreportgenerator.py  build.sh  cliconstants.py  devicedetails.py  gocli.py  test.py  versionmanager.py  webparser.py
sugo/features/: __init__.py  screenshot.py
sugo/utils/: __init__.py  checks.py  chromeprofile.py  commands.py  display.py  filehandler.py  network.py
