[tool.poetry]
name = "sugo"
version = "0.1.1"
description = ""
authors = ["Govardhan Ummadisetty <vardhank9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
requests = "^2.31.0"
bs4 = "^0.0.2"
rich = "^13.7.1"
tabulate = "^0.9.0"
click = "^8.1.7"
typer = "^0.9.0"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
